# agentic-worm

./: .gitignore  DEMO_GUIDE.md  Dockerfile  MEMORY_SETUP.md  README.md  apply_validation_fixes.sh  check_syntax.py  create_live_memory_data.py  debug_memory_stats.py  docker-compose.yml  final_memory_fix.py  fix_memory_final.sh  fix_memory_system.sh  fix_syntax_and_rebuild.sh  launch_demo.py  minimal_memory_fix.py  patch_memory_stats.py  pyproject.toml  quick_fix_workflow.py  quick_memory_fix.sh  quick_start.py  rebuild_and_test.sh  requirements.txt  restart_docker.sh  restart_memory_fix.sh  run_debug.sh  run_memory_test.sh  simple_memory_fix.py  test_arango_connection.py  test_fixed_memory.sh  test_memory_fixes.sh  test_memory_system.sh
docker/: Dockerfile.agentic-worm  docker-compose.yml
scripts/: demo_dashboard.py  setup.sh  start_demo.sh  test_agentic_workflow.py  test_openworm_integration.py
src/agentic_worm/: __init__.py  cli.py
src/agentic_worm/core/: __init__.py  state.py  system.py
src/agentic_worm/demo/: __init__.py  runner.py  scenarios.py
src/agentic_worm/intelligence/: __init__.py  nodes.py  openworm.py  tools.py  workflow.py
src/agentic_worm/memory/: __init__.py  manager.py  storage.py  types.py
src/agentic_worm/visualization/: __init__.py  dashboard.py  metrics.py  realtime.py
